cros: Add CHECK to ShelfWidget initialization enabling future cleanup.

BUG=701157

Review-Url: https://codereview.chromium.org/2773473003
Cr-Commit-Position: refs/heads/master@{#459123}

Former-commit-id: c01d07dff75c0e7aeb8ef9f792652d32f1fd8957